# FFmpegWrapper

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib.ffmpeg/: CMakeLists.txt  ffmpegstreamer.cpp  ffmpegstreamer.hpp  frame.hpp  utils.hpp
